melhor texto para explicar retorno de documento

--- a/professores/templates/professores/entrega_avaliar.html
+++ b/professores/templates/professores/entrega_avaliar.html
@@ -132,7 +132,7 @@
           </span>
           <div style="flex: 1;">
             <label for="arquivo" style="font-size: 0.88em; color: #1976d2;">
-              {% lng "Envio de relatório com anotações (opcional e será enviado automaticamente para o grupo)" "Submission of report with notes (optional and will be automatically sent to the group)" %}
+              {% lng "Envio de documento com suas anotações (opcional e será enviado automaticamente para o grupo)" "Submission of document with your notes (optional and will be automatically sent to the group)" %}
             </label>
             <input id="arquivo" type="file" name="arquivo" style="font-size: 0.8em; margin: 5px;" {% include "formatos_suportados.html" %}>
             {% if relatorio_revisado_orientador %}
