--- a/estudantes/templates/estudantes/encontros_marcar.html
+++ b/estudantes/templates/estudantes/encontros_marcar.html
@@ -39,152 +39,180 @@
       background-color: #f8f9fa;
       font-size: 0.9em;
     }
+    .bloco_externo {
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 1em;
+      background-color: #f8f9fa;
+      width: fit-content;
+      max-width: 100%;
+    }
   </style>
 {% endblock %}
 
 {% block content %}
 
-  <form method="post"> {% csrf_token %}
-    {% if user.eh_estud %}
-      <h4>{% lng "Projeto" "Project" %}: {{projeto.get_titulo_org}}</h4>
-    {% else %}
-      <h4>{% lng "Somente visualização das opções de encontros (você não está registrado como estudante)" "Only viewing the meeting options (you are not registered as a student)" %}</h4>
-    {% endif %}
-    <br>
+  
+  {% if user.eh_estud %}
+  <h5 class="mb-3">
+    <span style="background:#e3f2fd; color:#0d47a1; padding:0.3em 0.7em; border-radius:8px;">
+      {% lng "Projeto" "Project" %}: {{ projeto.get_titulo_org }}
+    </span>
+  </h5> 
+  {% else %}
+    <h5 class="mb-3">{% lng "Somente visualização das opções de encontros (você não está registrado como estudante)" "Only viewing the meeting options (you are not registered as a student)" %}</h5>
+  {% endif %}
 
-    {% if aviso %}
-      <h4 class="red-bold">{{aviso|linebreaks}}</h4><br><br>
-    {% endif %}
+  {% if aviso %}
+    <h4 class="red-bold">{{aviso|linebreaks}}</h4><br><br>
+  {% endif %}
 
-    {% if encontros %}
-      <b>{% lng "Horários disponíveis para agendamento" "Available times for scheduling" %}:</b>
-    {% else %}
-      {% lng "Sem encontros para marcar." "No slots to schedule." %}
-    {% endif %}
+  <div id="horarios">
 
-    <div id="horarios">
+    {% for tema, dados in encontros_por_tema_agendamento.items %}
+    
+      <div class="bloco_externo">
 
-      {% if configuracao.permite_agendar_mentorias %}
+        <form method="post"> {% csrf_token %}
 
-        <table class="table table-borderless table-sm arredondado">
-          <tbody>
-          {% for e in encontros %}
-            <tr><td style="display: flex;"><div class="botao">
-              <input id="din{{e.id}}" type="radio" name="selection" value="{{e.id}}" 
-              {% if e.projeto == projeto %}checked{% endif %}
-              {% if e.projeto and e.projeto != projeto %}disabled{% endif %}
-              {% if e.startDate.date == hoje %}disabled{% endif %}
-              {% if e.bloqueado %}disabled{% endif %}
-              ></div>
-                {% if e.projeto and e.projeto != projeto %}
-                  <div class="tag_intern" style="color:lightgrey;">
-                  <label title="Horário já selecionado por outro grupo!" 
-                {% elif e.projeto and e.projeto == projeto %}
-                  <div class="tag_intern" style="color:Red;">
-                  <label title="Horário selecionado por seu grupo!"
-                {% elif e.startDate.date == hoje %}
-                  <div class="tag_intern" style="color:lightgrey;">
-                  <label title="Opção de horário vencida!"
-                {% elif e.bloqueado %}
-                  <div class="tag_intern" style="color:lightgrey;">
-                  <label title="Horário bloqueado para agendamento!"
-                {% else %}
-                  <div class="tag_intern" style="color:Green;">
-                  <label title="Horário livre!"
-                {% endif %}class="radio" data-toggle="tooltip" data-placement="bottom" for="din{{e.id}}">
-                  <span class="spa_1">
-                    <span class="texto-longo">{{e.startDate|date:"d \d\e E \d\e Y \d\a\s H:i"}} às {{e.endDate|date:"H:i"}}</span>
-                    <span class="texto-curto">{{e.startDate|date:"d/m/y \d\a\s H:i"}} às {{e.endDate|date:"H:i"}}</span>
-                  </span>
-                  {% if e.facilitador %}<div class="bot_tag">
-                    {% lng_g e.facilitador.genero "Facilitador" "Facilitadora" "Facilitator" %}:
-                    {{e.facilitador.get_full_name}}</div>{% endif %}
-                  {% if e.location %}
-                    <div class="bot_tag">
-                      Local:
-                      {% if e.url_location %}
-                        {% lng "Vídeo-conferência" "Video-conference" %}
-                      {% else %}
-                        {{e.location}}
+          {% if dados.encontros %}
+            {% if tema %}
+              {% lng "Horários disponíveis para agendamento de" "Available times for scheduling" %} <b>{{ tema }}</b>:
+            {% else %}
+              {% lng "Horários disponíveis para agendamento" "Available times for scheduling" %}:
+            {% endif %}
+          {% else %}
+            {% lng "Sem encontros para marcar." "No slots to schedule." %}
+          {% endif %}
+
+          {% if configuracao.permite_agendar_mentorias %}
+
+            <table class="table table-borderless table-sm arredondado">
+              <tbody>
+              {% for e in dados.encontros %}
+                <tr><td style="display: flex;"><div class="botao">
+                  <input id="din{{e.id}}" type="radio" name="selection" value="{{e.id}}" 
+                  {% if e.projeto == projeto %}checked{% endif %}
+                  {% if e.projeto and e.projeto != projeto %}disabled{% endif %}
+                  {% if e.startDate.date == hoje %}disabled{% endif %}
+                  {% if e.bloqueado %}disabled{% endif %}
+                  ></div>
+                    {% if e.projeto and e.projeto != projeto %}
+                      <div class="tag_intern" style="color:lightgrey;">
+                      <label title="Horário já selecionado por outro grupo!" 
+                    {% elif e.projeto and e.projeto == projeto %}
+                      <div class="tag_intern" style="color:Red;">
+                      <label title="Horário selecionado por seu grupo!"
+                    {% elif e.startDate.date == hoje %}
+                      <div class="tag_intern" style="color:lightgrey;">
+                      <label title="Opção de horário vencida!"
+                    {% elif e.bloqueado %}
+                      <div class="tag_intern" style="color:lightgrey;">
+                      <label title="Horário bloqueado para agendamento!"
+                    {% else %}
+                      <div class="tag_intern" style="color:Green;">
+                      <label title="Horário livre!"
+                    {% endif %}class="radio" data-toggle="tooltip" data-placement="bottom" for="din{{e.id}}">
+                      <span class="spa_1">
+                        <span class="texto-longo">{{e.startDate|date:"d \d\e E \d\e Y \d\a\s H:i"}} às {{e.endDate|date:"H:i"}}</span>
+                        <span class="texto-curto">{{e.startDate|date:"d/m/y \d\a\s H:i"}} às {{e.endDate|date:"H:i"}}</span>
+                      </span>
+                      {% if e.facilitador %}<div class="bot_tag">
+                        {% lng_g e.facilitador.genero "Facilitador" "Facilitadora" "Facilitator" %}:
+                        {{e.facilitador.get_full_name}}</div>{% endif %}
+                      {% if e.location %}
+                        <div class="bot_tag">
+                          Local:
+                          {% if e.url_location %}
+                            {% lng "Vídeo-conferência" "Video-conference" %}
+                          {% else %}
+                            {{e.location}}
+                          {% endif %}
+                        </div>
                       {% endif %}
-                    </div>
-                  {% endif %}
-                  {% if e.projeto and e.projeto == projeto %}
-                    <div style="text-decoration: underline; margin-left: 0.5em; margin-right: 0.5em; display: inline-block; text-wrap: nowrap;">Horário Confirmado para seu grupo!</div>
-                  {% endif %}
-                </label>
-                {% endfor %}
-              </div>
-            </td>
-          </tr>
-          </tbody>
-        </table>
+                      {% if e.projeto and e.projeto == projeto %}
+                        <div style="text-decoration: underline; margin-left: 0.5em; margin-right: 0.5em; display: inline-block; text-wrap: nowrap;">Horário Confirmado para seu grupo!</div>
+                      {% endif %}
+                    </label>
+                    {% endfor %}
+                  </div>
+                </td>
+              </tr>
+              </tbody>
+            </table>
 
-        {% else %}
-          <br>
-          {% comment %} RED {% endcomment %}
-          <div class="alert alert-danger" role="alert">
-            <p>{% lng "Horários de agendamento estão temporariamente bloqueados." "Scheduling time slots are temporarily blocked." %}</p>
+          {% else %}
+
+            <br>
+            {% comment %} RED {% endcomment %}
+            <div class="alert alert-danger" role="alert">
+              <p>{% lng "Horários de agendamento estão temporariamente bloqueados." "Scheduling time slots are temporarily blocked." %}</p>
+            </div>
+
+          {% endif %}
+
+          <div class="mt-2">
+            {% if dados.encontros and configuracao.permite_agendar_mentorias %}
+              <button class="btn btn-primary mb-1 ml-2" type="submit" 
+              {% if not user.eh_estud or not projeto %}disabled{% endif %}>
+                {% if dados.agendado %}
+                  {% lng "Reagendar" "Reschedule" %}
+                {% else %}
+                  {% lng "Agendar" "Schedule" %}
+                {% endif %}
+              </button>
+
+              {% if dados.agendado %}
+                <button class="btn btn-danger mb-1 ml-2" id="cancelar{{dados.agendado.id}}"
+                  {% if not user.eh_estud or not projeto %}disabled{% endif %}>
+                  {% lng "Cancelar Agendamento" "Cancel Schedule" %}
+                </button>
+                <script>
+                  $("#cancelar{{dados.agendado.id}}").click(function() {
+                    if(confirm("Tem certeza que deseja cancelar o agendamento para {{dados.agendado.startDate}}?")){
+                      event.preventDefault(); 
+                      window.location = "{% url 'encontros_cancelar' dados.agendado.id %}";
+                    } else {
+                      return false;
+                    }
+                  });
+                </script>
+              {% endif %}
+            {% endif %}
           </div>
 
-        {% endif %}
-    </div>
 
-    {% if encontros %}
+          <script>
+
+            window.setInterval("update()", 120000); // 2 minutos
+
+            var update = function() {
+              $.ajax({
+                type: "GET",
+                url: "{% url 'encontros_marcar' %}",
+                data: {"csrfmiddlewaretoken": "{{ csrf_token }}",},
+                success: function(response){
+                  var value = $( "input[type=radio][name=selection]:checked" ).val();
+                  $("#horarios").replaceWith($("#horarios",response));
+                  if(!$("input[type=radio][name=selection][value=" + value + "]").prop("disabled")){
+                    $("input[type=radio][name=selection][value=" + value + "]").prop("checked", true);
+                  }
+                  $(".tooltip-inner").remove();
+                  $(".tooltip-arrow").remove();
+                },
+                {% include "ajax_error_function.js" %}
+              });
+            };
+
+          </script>
+
+        </form>
+
+      </div>
       <br>
-      <button class="btn btn-primary mb-1 ml-2" type="submit" 
-       {% if user.tipo_de_usuario != 1 or not projeto %}disabled{% endif %}>
-        {% if agendado %}
-          {% lng "Reagendar" "Reschedule" %}
-        {% else %}
-          {% lng "Agendar" "Schedule" %}
-        {% endif %}
-      </button>
 
-      {% if agendado %}
-        <button class="btn btn-danger mb-1 ml-2" id="cancelar" 
-          {% if user.tipo_de_usuario != 1 or not projeto %}disabled{% endif %}>
-          {% lng "Cancelar Agendamento" "Cancel Schedule" %}
-        </button>
-        <script>
-          $("#cancelar").click(function() {
-            if(confirm("Tem certeza que deseja cancelar o agendamento para {{agendado.startDate}}?")){
-              event.preventDefault(); 
-              window.location = "{% url 'encontros_cancelar' agendado.id %}";
-            } else {
-              return false;
-            }
-          });
-        </script>
-      {% endif %}
+    {% endfor %}
 
-    {% endif %}
-
-
-    <script>
-
-      window.setInterval("update()", 120000); // 2 minutos
-
-      var update = function() {
-        $.ajax({
-          type: "GET",
-          url: "{% url 'encontros_marcar' %}",
-          data: {"csrfmiddlewaretoken": "{{ csrf_token }}",},
-          success: function(response){
-            var value = $( "input[type=radio][name=selection]:checked" ).val();
-            $("#horarios").replaceWith($("#horarios",response));
-            if(!$("input[type=radio][name=selection][value=" + value + "]").prop("disabled")){
-              $("input[type=radio][name=selection][value=" + value + "]").prop("checked", true);
-            }
-            $(".tooltip-inner").remove();
-            $(".tooltip-arrow").remove();
-          },
-          {% include "ajax_error_function.js" %}
-        });
-      };
-
-    </script>
-
-  </form>
+  </div>
 
 {% endblock %}
