--- a/projetos/templates/projetos/projeto_infos.html
+++ b/projetos/templates/projetos/projeto_infos.html
@@ -559,25 +559,29 @@
       </div>
     {% endif %}
     
-    <div class="mt-3">
-      {% include "professores/includes/ver_site.html" %}
-      {% include "professores/includes/ver_pastas_projeto.html" %}
-    </div>
-
-    {% if user.eh_prof_a %}
-      <hr>
-      <h4>
-        {% lng "Certificados" "Certificates" %}:
-        {% if user.eh_prof_a %}
-          <small class="esconder">
-            <a href="{% url 'carregar_certificado' %}">&#10133;</a>
-          </small>
-        {% endif %}
-      </h4>
-      <div class="caixa_rolante">
-        {% include "certificados.html" with certificados=projeto.certificado_set.all %}
-      </div>
+    {% if projeto.get_site or projeto.pastas_do_projeto %}
+      <div class="mt-3">
+        {% include "professores/includes/ver_site.html" %}
+        {% include "professores/includes/ver_pastas_projeto.html" %}
+      </div>  
     {% endif %}
+    
+    {% with certificados=projeto.certificado_set.all %}
+      {% if certificados or user.eh_admin %}
+        <hr>
+        <h4>
+          {% lng "Certificados" "Certificates" %}:
+          {% if user.eh_prof_a %}
+            <small class="esconder">
+              <a href="{% url 'carregar_certificado' %}">&#10133;</a>
+            </small>
+          {% endif %}
+        </h4>
+        <div class="caixa_rolante">
+          {% include "certificados.html" with certificados=projeto.certificado_set.all %}
+        </div>
+      {% endif %}
+    {% endwith %}
 
     {% if user.eh_prof_a %}
     {% if projeto.encontro_set.all %}
