--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -186,7 +186,7 @@ tbody tr:nth-child(odd) {background-color: #f9f9f9;} */
   gap: 1px;
   margin-left: 6px;
 }
-.logo-container {
+.logo-org-container {
   display: flex;
   align-items: center;
   justify-content: center;
