--- a/projetos/templates/projetos/comite.html
+++ b/projetos/templates/projetos/comite.html
@@ -18,7 +18,7 @@
           <a href="{% url 'professor_detail' professor.id %}">{{professor.user.get_full_name}}</a>
         </th>
         <td class="text-center">
-          <a href="mailto:{{professor.user.email}}"> &lt;{{professor.user.email}}&gt;</a><br>
+          <a href="mailto:{{professor.user.email}}">{{professor.user.email}}</a>
         </td>
         <td >
           {% if professor.lattes %}
