--- a/projetos/templates/projetos/reunioes.html
+++ b/projetos/templates/projetos/reunioes.html
@@ -20,7 +20,8 @@
       <tr class="item">
         <th scope="row"><a href="{% url 'edita_reuniao' reuniao.id %}">{{reuniao.titulo}}</a></th>
         <td><a href="{% url 'projeto_infos' reuniao.projeto.id %}">{{reuniao.projeto}}</a></td>
-        <td data-sort="{{reuniao.data_hora}}">{{reuniao.data_hora|date:"d/m/Y H:i"}}</td>
+        {% comment %} <td data-sort="{{reuniao.data_hora|date:'Y-m-d\TH:i:s' }}">{{reuniao.data_hora|date:"d/m/Y H:i"}}</td> {% endcomment %}
+        <td data-sort="{{reuniao.data_hora|date:'Y-m-d\TH:i:s' }}">{{reuniao.data_hora|date:"d/m/Y H:i"}}</td>
         <td>{{reuniao.local}}</td>
         <td>
           {% for rp in reuniao.reuniaoparticipante_set.all %}
