--- a/projetos/templates/projetos/reunioes.html
+++ b/projetos/templates/projetos/reunioes.html
@@ -23,11 +23,13 @@
         {% comment %} <td data-sort="{{reuniao.data_hora|date:'Y-m-d\TH:i:s' }}">{{reuniao.data_hora|date:"d/m/Y H:i"}}</td> {% endcomment %}
         <td data-sort="{{reuniao.data_hora|date:'Y-m-d\TH:i:s' }}">{{reuniao.data_hora|date:"d/m/Y H:i"}}</td>
         <td>{{reuniao.local}}</td>
-        <td>
-          {% for rp in reuniao.reuniaoparticipante_set.all %}
-              &bull; {{ rp.participante.get_full_name }} ({{ rp.get_situacao_display }})<br>
+        <td><div style="line-height: 1.10; font-size: 0.8em;">
+          {% for rp in reuniao.participantes_reuniao.all %}
+            {% if rp.situacao == 1 %} {% comment %} (1, "Presente"), {% endcomment %}
+              &bull; {{ rp.participante.get_full_name }}<br> {% comment %} ({{ rp.get_situacao_display }}) {% endcomment %}
+            {% endif %}
           {% endfor %}
-        </td>
+        </div></td>
       </tr>
     {% endfor %}
   {% include "tabelas_bottom.html" %}
