--- a/templates/informacoes_ml.html
+++ b/templates/informacoes_ml.html
@@ -72,7 +72,7 @@
       {% for inf in informacoes %}
         {% comment %} O quarto campo é o nome da classe, mas se for False desliga o botao {% endcomment %}
         <label {% if inf.3 is not None and inf.3 != False %}class="{{inf.3}}"{% endif %} for="info_{{inf.1|limpa_texto_variavel}}">
-          <input id="info_{{inf.1|limpa_texto_variavel}}"
+          <input id="info_{{inf.1|limpa_texto_variavel}}" class="informacoes_checkbox"
                  onchange="($(this).prop('checked') ? $(`{{inf.0|safe}}`).show() : $(`{{inf.0|safe}}`).hide())"
                  type="checkbox" {% if inf.3 is None or inf.3 != False %}checked{% endif %} />
           {% lng inf.1 inf.2 %}
